
Release tip
-----------

* Added admin i18n contributed by http://bitbucket.org/chembervint
  Included translations: es, ru

Release 1.60 (Apr 18, 2010)
---------------------------

* Added get_annotated_list, contributed by Alexey Kinyov
* Complete revamp of the documentation. It's now divided in sections for easier
  reading, and the package includes .rst files instead of the html build.
* Added raw id fields support in the admin
* Fixed setup.py to make it work in 2.4 again
* The correct ordering in NS/MP trees is now enforced in the queryset.
* Cleaned up code, removed some unnecessary statements.
* Tests refactoring, to make it easier to spot the model being tested.
* Fixed support of trees using proxied models. It was broken due to a bug in
  Django.
* Fixed a bug in add_child when adding nodes to a non-leaf in sorted MP.
* There are now 648 unit tests. Test coverage is 96%
* This will be the last version compatible with Django 1.0. There will be a
  a 1.6.X branch maintained for urgent bug fixes, but the main development will
  focus on recent Django versions.


Release 1.52 (Dec 18, 2009)
---------------------------

* Really fixed the installation of templates.


Release 1.51 (Dec 16, 2009)
---------------------------

* Forgot to include treebeard/tempates/\*.html in MANIFEST.in


Release 1.5 (Dec 15, 2009)
--------------------------

New features added
~~~~~~~~~~~~~~~~~~

* Forms

  - Added MoveNodeForm

* Django Admin

  - Added TreeAdmin

* MP_Node

  - Added 2 new checks in MP_Node.find_problems():

    4. a list of ids of nodes with the wrong depth value for
       their path
    5. a list of ids nodes that report a wrong number of children

  - Added a new (safer and faster but less comprehensive) MP_Node.fix_tree()
    approach.

* Documentation

  - Added warnings in the documentation when subclassing MP_Node or NS_Node
    and adding a new Meta.

  - HTML documentation is now included in the package.
  
  - CHANGES file and section in the docs.
