@@ -49,9 +49,9 @@ copyright = u'2008-2010, Gustavo Picon'
 # built documents.
 #
 # The short X.Y version.
-version = '1.60'
+version = '1.61'
 # The full version, including alpha/beta/rc tags.
-release = '1.60'
+release = '1.61'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
